--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -28,23 +28,23 @@ dataSources:
         - event: SwapClosed(uint256)
           handler: handleSwapClosed
       file: ./src/Unibond.ts
-  # - kind: ethereum/contract
-  #   name: Univ3NFT
-  #   network: 'mainnet'
-  #   source:
-  #     address: '0xc36442b4a4522e871399cd717abdd847ab11fe88'
-  #     abi: Univ3NFT
-  #     startBlock: 12369651
-  #   mapping:
-  #     kind: ethereum/events
-  #     apiVersion: 0.0.5
-  #     language: wasm/assemblyscript
-  #     entities:
-  #       - Transfer
-  #     abis:
-  #       - name: Univ3NFT
-  #         file: ./abis/Univ3NFT.json
-  #     eventHandlers:
-  #       - event: Transfer(indexed address,indexed address,indexed uint256)
-  #         handler: handleTransfer
-  #     file: ./src/Univ3NFT.ts
+  - kind: ethereum/contract
+    name: Univ3NFT
+    network: 'mainnet'
+    source:
+      address: '0xc36442b4a4522e871399cd717abdd847ab11fe88'
+      abi: Univ3NFT
+      startBlock: 12369651
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Transfer
+      abis:
+        - name: Univ3NFT
+          file: ./abis/Univ3NFT.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,indexed uint256)
+          handler: handleTransfer
+      file: ./src/Univ3NFT.ts
